--- a/Setup.ini
+++ b/Setup.ini
@@ -7,13 +7,15 @@ UiBackgroundSuit:3
 UiMusicVolume:1000
 UiBackgroundBlur:0
 UiLogoType:2
-UiLogoText:玩蔚蓝档案玩的 1.0.1
+UiLogoText:玩蔚蓝档案玩的 1.1
 LaunchArgumentIndie:0
 LaunchArgumentWindowType:3
 LaunchArgumentWindowWidth:1920
 LaunchArgumentWindowHeight:1080
-WindowHeight:674
+WindowHeight:682
 WindowWidth:1113
 UiMusicStop:True
 UiHiddenOtherHelp:False
 LaunchArgumentIndieV2:0
+UiCustomType:1
+UiCustomNet:https://versions.allforhina.com/Custom.xaml
