--- a/Setup.ini
+++ b/Setup.ini
@@ -7,12 +7,12 @@ UiBackgroundSuit:3
 UiMusicVolume:1000
 UiBackgroundBlur:0
 UiLogoType:2
-UiLogoText:玩蔚蓝档案玩的 1.2
+UiLogoText:玩蔚蓝档案玩的 1.2-Pre1
 LaunchArgumentIndie:0
 LaunchArgumentWindowType:3
 LaunchArgumentWindowWidth:1920
 LaunchArgumentWindowHeight:1080
-WindowHeight:682
+WindowHeight:681
 WindowWidth:1113
 UiMusicStop:True
 UiHiddenOtherHelp:False
